k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dialogflow-ui-service
spec:
  selector:
    app: dialogflow-ui
  ports:
  - name: http
    targetPort: 8090
    port: 80
