k8s/Ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ushaflow-web
spec:
  entryPoints:
    - http
    - https
  routes:
  - match: HostRegexp(`{subdomain:.+}.web.ushaflow.io`) && Method(`GET`)
    kind: Rule
    services:
    - name: ushaflow-web
      port: 80

  - match: HostRegexp(`{subdomain:.+}.web.ushaflow.com`) && Method(`GET`)
    kind: Rule
    services:
    - name: ushaflow-web
      port: 80

  - match: HostRegexp(`{subdomain:.+}.ui.dialogflow.cloud.ushakov.co`) && Method(`GET`)
    kind: Rule
    services:
    - name: ushaflow-web
      port: 80

  - match: HostRegexp(`{subdomain:.+}.web.ushaflow.io`) && Method(`POST`)
    kind: Rule
    services:
    - name: ushaflow-ssr
      port: 80

  tls:
    secretName: ushaflow-web-cert
